config-root/namespaces/jx-production/jx-aspnet-app-01/jx-aspnet-app-01-jx-aspnet-app-01-deploy.yaml
# Source: jx-aspnet-app-01/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-aspnet-app-01-jx-aspnet-app-01
  labels:
    draft: draft-app
    chart: "jx-aspnet-app-01-0.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-aspnet-app-01'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jx-aspnet-app-01-jx-aspnet-app-01
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-aspnet-app-01-jx-aspnet-app-01
    spec:
      serviceAccountName: jx-aspnet-app-01-jx-aspnet-app-01
      containers:
      - name: jx-aspnet-app-01
        image: "10.104.245.237/hughexp/jx-aspnet-app-01:0.0.4"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
      - name: "tekton-container-registry-auth"
