config-root/namespaces/jx-production/jx-aspnet-app-01/jx-aspnet-app-01-ingress.yaml
# Source: jx-aspnet-app-01/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'jx-aspnet-app-01'
  name: jx-aspnet-app-01
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: jx-aspnet-app-01
            port:
              number: 80
    host: jx-aspnet-app-01-jx-production.192.168.49.2.nip.io
